# atmaCup-16-in-collaboration-with-RECRUIT

./: .gitignore  README.md  pyproject.toml
src/: conf.py  datamodule.py  model.py  modelmodule.py  utils.py
