[project]
name = "src"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "tubo213", email = "hoge@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "matplotlib>=3.7.2",
    "tqdm>=4.65.0",
    "joblib>=1.3.1",
    "pyyaml>=6.0.1",
    "types-PyYAML>=6.0.12.11",
    "hydra-core>=1.3.2",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "polars>=0.18.9",
    "scikit-learn>=1.3.0",
    "pytorch-lightning>=2.1.2",
    "torch>=2.1.1",
    "pyg_lib",
    "torch_geometric",
    "torch_scatter ",
    "torch_sparse",
    "torch_cluster",
    "torch_spline_conv",
    "pyarrow>=14.0.1",
    "shirokumas>=0.0.2",
    "transformers>=4.36.0",
    "rich>=13.7.0",
    "wandb>=0.16.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[[tool.rye.sources]]
name = "pytorch-geometric"
url = "https://data.pyg.org/whl/torch-2.1.0+cu121.html"
type = "find-links"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "flake8>=5.0.4",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "jupyter>=1.0.0",
    "jupyter_black>=0.3.4",
]

[tool.black]
line-length = 99

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []
line-length = 99


[tool.hatch.metadata]
allow-direct-references = true
